mobile portrait contact links overflow fix 1518 - Macbook

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -171,7 +171,6 @@ h3 {
 🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰  HEADER  🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰
 🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰 */
 
-
 /* 
 🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰
 🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰  MAIN APP  🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰🀰
@@ -945,7 +944,7 @@ p .active-txt-span.active-txt-span--enter {
     height: 3.3em;
 }
 
-.keyboard__row>* {
+.keyboard__row > * {
     position: relative;
     text-align: center;
     float: left;
@@ -974,7 +973,7 @@ p .active-txt-span.active-txt-span--enter {
     /* transition: background var(--background-transition); */
 }
 
-.keyboard.dark-theme .keyboard__row>* {
+.keyboard.dark-theme .keyboard__row > * {
     color: var(--border-gold);
     -webkit-user-select: none;
     /* border: 1px solid #444; */
@@ -993,13 +992,13 @@ p .active-txt-span.active-txt-span--enter {
     /* transition: background var(--background-transition); */
 }
 
-.keyboard__row--h1>div {
+.keyboard__row--h1 > div {
     width: 3.5em;
 }
 
 /* KEY PRESSED ON KEYBOARD */
-.keyboard__row>div[data-pressed],
-.keyboard__row>div:active {
+.keyboard__row > div[data-pressed],
+.keyboard__row > div:active {
     /* background: #2a2a2a; */
     background: var(--wrap-highlight--light);
     /* background: rgba(255, 166, 0, 0.474); */
@@ -1015,8 +1014,8 @@ p .active-txt-span.active-txt-span--enter {
     /* box-shadow: 0 0 0 0.05em black; */
 }
 
-.keyboard.dark-theme .keyboard__row>div[data-pressed],
-.keyboard.dark-theme .keyboard__row>div:active {
+.keyboard.dark-theme .keyboard__row > div[data-pressed],
+.keyboard.dark-theme .keyboard__row > div:active {
     background: rgba(0, 128, 0, 0.304);
     background: #529ce180;
 }
@@ -1041,7 +1040,7 @@ p .active-txt-span.active-txt-span--enter {
     width: 18em;
 }
 
-.key--double>* {
+.key--double > * {
     padding-top: 0.1em;
 }
 
@@ -1049,21 +1048,21 @@ p .active-txt-span.active-txt-span--enter {
     line-height: 2.8em;
 }
 
-.key--bottom-left>* {
+.key--bottom-left > * {
     position: absolute;
     text-align: left;
     bottom: 0.4em;
     left: 0.4em;
 }
 
-.key--bottom-right>* {
+.key--bottom-right > * {
     position: absolute;
     text-align: right;
     bottom: 0.4em;
     right: 0.4em;
 }
 
-.key--fn>* {
+.key--fn > * {
     font-size: 0.6em;
     line-height: 1em;
     padding-top: 1.2em;
@@ -1072,12 +1071,12 @@ p .active-txt-span.active-txt-span--enter {
     float: right;
 }
 
-.key--word>* {
+.key--word > * {
     font-size: 0.8em;
 }
 
-.key--arrow--tall>*,
-.key--arrow>* {
+.key--arrow--tall > *,
+.key--arrow > * {
     font-size: 0.5em;
     line-height: 3em;
 }
@@ -1088,11 +1087,11 @@ p .active-txt-span.active-txt-span--enter {
     line-height: 0.5em;
 }
 
-.key--arrow--tall>* {
+.key--arrow--tall > * {
     padding-top: 0.2em;
 }
 
-.keyboard>.keyboard__row {
+.keyboard > .keyboard__row {
     text-align: center;
 }
 
@@ -1659,7 +1658,8 @@ input[type="range"]::-webkit-slider-runnable-track:hover {
 }
 
 /* DARK THEME TRACK HOVER */
-.control-wrap.dark-theme input[type="range"]::-webkit-slider-runnable-track:hover {
+.control-wrap.dark-theme
+    input[type="range"]::-webkit-slider-runnable-track:hover {
     background: #4e545b;
 }
 
@@ -1773,8 +1773,8 @@ input[type="range"]:focus::-ms-fill-upper {
 }
 
 /* RADIO LABEL TEXT */
-[type="radio"]:checked+label,
-[type="radio"]:not(:checked)+label {
+[type="radio"]:checked + label,
+[type="radio"]:not(:checked) + label {
     position: relative;
     width: 75px;
     height: 14px;
@@ -1792,8 +1792,8 @@ input[type="range"]:focus::-ms-fill-upper {
     color: #666;
 }
 
-.control-wrap.dark-theme [type="radio"]:checked+label,
-.control-wrap.dark-theme [type="radio"]:not(:checked)+label {
+.control-wrap.dark-theme [type="radio"]:checked + label,
+.control-wrap.dark-theme [type="radio"]:not(:checked) + label {
     color: darkgoldenrod;
 }
 
@@ -1807,7 +1807,7 @@ input[type="range"]:focus::-ms-fill-upper {
 /* RADIO HOVER BACKGROUND HIGHLIGHT */
 /* TRY TO ADJUST WIDTH */
 /* [type="radio"]:checked + label, */
-[type="radio"]:not(:checked)+label:hover {
+[type="radio"]:not(:checked) + label:hover {
     /* BACKGROUND ONLY */
     /* background: lightgreen;
     border-top-left-radius: 10px;
@@ -1821,7 +1821,7 @@ input[type="range"]:focus::-ms-fill-upper {
 }
 
 /* DISABLED: HOVER */
-[type="radio"]:not(:checked):disabled+label:hover {
+[type="radio"]:not(:checked):disabled + label:hover {
     cursor: default;
     font-weight: 300;
 
@@ -1829,7 +1829,7 @@ input[type="range"]:focus::-ms-fill-upper {
 }
 
 /* :CHECKED: DISABLED: HOVER */
-[type="radio"]:checked:disabled+label:hover {
+[type="radio"]:checked:disabled + label:hover {
     cursor: default;
     font-weight: 300;
 
@@ -1837,8 +1837,8 @@ input[type="range"]:focus::-ms-fill-upper {
 }
 
 /* OUTER CIRCLE */
-[type="radio"]:checked+label:before,
-[type="radio"]:not(:checked)+label:before {
+[type="radio"]:checked + label:before,
+[type="radio"]:not(:checked) + label:before {
     content: "";
     position: absolute;
     left: 0;
@@ -1850,8 +1850,8 @@ input[type="range"]:focus::-ms-fill-upper {
     background: #fff;
 }
 
-.control-wrap.dark-theme [type="radio"]:checked+label:before,
-.control-wrap.dark-theme [type="radio"]:not(:checked)+label:before {
+.control-wrap.dark-theme [type="radio"]:checked + label:before,
+.control-wrap.dark-theme [type="radio"]:not(:checked) + label:before {
     border: 1px solid darkgoldenrod;
     border-radius: 100%;
     background: #4d4d4d91;
@@ -1863,8 +1863,8 @@ input[type="range"]:focus::-ms-fill-upper {
 } */
 
 /* INNER CIRCLE */
-[type="radio"]:checked+label:after,
-[type="radio"]:not(:checked)+label:after {
+[type="radio"]:checked + label:after,
+[type="radio"]:not(:checked) + label:after {
     content: "";
     width: 10px;
     height: 10px;
@@ -1893,13 +1893,13 @@ input[type="range"]:focus::-ms-fill-upper {
     background: red;
 } */
 
-[type="radio"]:not(:checked)+label:after {
+[type="radio"]:not(:checked) + label:after {
     opacity: 0;
     -webkit-transform: scale(0);
     transform: scale(0);
 }
 
-[type="radio"]:checked+label:after {
+[type="radio"]:checked + label:after {
     opacity: 1;
     -webkit-transform: scale(1);
     transform: scale(1);
@@ -2592,6 +2592,18 @@ button.btn--flip:hover {
 
     .single-link-wrap {
         margin-bottom: 25px;
+    }
+}
+
+@media (max-width: 550px) {
+    a.contact-link--full {
+        display: none;
+    }
+}
+
+@media (min-width: 551px) {
+    a.contact-link--small {
+        display: none;
     }
 }
 
